DEV-11086 fix for illegible normal help tooltips

--- a/app/assets/stylesheets/_common.scss
+++ b/app/assets/stylesheets/_common.scss
@@ -196,6 +196,8 @@ $success-icon-color:        #448025;
 $success-text-color:        #448044;
 
 $normal-tooltip-text-color: $core-white;
+$informational-tooltip-text-color: #DAEDFE;
+
 
 // hard errors
 // 404-like
